// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="display-flex-end"
>
  <div
    className="display-flex-column"
  >
    <label
      className="text-bold little-spacer-bottom"
      htmlFor="date-from"
    >
      start_date
    </label>
    <DateInput
      currentMonth={2018-02-05T00:00:00.000Z}
      data-test="from"
      highlightTo={2018-02-05T00:00:00.000Z}
      id="date-from"
      maxDate={2018-02-05T00:00:00.000Z}
      onChange={[Function]}
      placeholder="start_date"
      value={2018-01-17T00:00:00.000Z}
    />
  </div>
  <span
    className="note little-spacer-left little-spacer-right little-spacer-bottom"
  >
    to_
  </span>
  <div
    className="display-flex-column"
  >
    <label
      className="text-bold little-spacer-bottom"
      htmlFor="date-to"
    >
      end_date
    </label>
    <DateInput
      currentMonth={2018-01-17T00:00:00.000Z}
      data-test="to"
      highlightFrom={2018-01-17T00:00:00.000Z}
      id="date-to"
      minDate={2018-01-17T00:00:00.000Z}
      onChange={[Function]}
      placeholder="end_date"
      value={2018-02-05T00:00:00.000Z}
    />
  </div>
</div>
`;

exports[`should render: with min/max 1`] = `
<div
  className="display-flex-end"
>
  <div
    className="display-flex-column"
  >
    <label
      className="text-bold little-spacer-bottom"
      htmlFor="date-from"
    >
      start_date
    </label>
    <DateInput
      data-test="from"
      id="date-from"
      maxDate={2018-02-05T00:00:00.000Z}
      minDate={2018-01-17T00:00:00.000Z}
      onChange={[Function]}
      placeholder="start_date"
    />
  </div>
  <span
    className="note little-spacer-left little-spacer-right little-spacer-bottom"
  >
    to_
  </span>
  <div
    className="display-flex-column"
  >
    <label
      className="text-bold little-spacer-bottom"
      htmlFor="date-to"
    >
      end_date
    </label>
    <DateInput
      data-test="to"
      id="date-to"
      maxDate={2018-02-05T00:00:00.000Z}
      minDate={2018-01-17T00:00:00.000Z}
      onChange={[Function]}
      placeholder="end_date"
    />
  </div>
</div>
`;

exports[`should render: with min/max and value 1`] = `
<div
  className="display-flex-end"
>
  <div
    className="display-flex-column"
  >
    <label
      className="text-bold little-spacer-bottom"
      htmlFor="date-from"
    >
      start_date
    </label>
    <DateInput
      currentMonth={2018-02-05T00:00:00.000Z}
      data-test="from"
      highlightTo={2018-02-05T00:00:00.000Z}
      id="date-from"
      maxDate={2018-02-05T00:00:00.000Z}
      minDate={2018-01-17T00:00:00.000Z}
      onChange={[Function]}
      placeholder="start_date"
      value={2018-01-17T00:00:00.000Z}
    />
  </div>
  <span
    className="note little-spacer-left little-spacer-right little-spacer-bottom"
  >
    to_
  </span>
  <div
    className="display-flex-column"
  >
    <label
      className="text-bold little-spacer-bottom"
      htmlFor="date-to"
    >
      end_date
    </label>
    <DateInput
      currentMonth={2018-01-17T00:00:00.000Z}
      data-test="to"
      highlightFrom={2018-01-17T00:00:00.000Z}
      id="date-to"
      maxDate={2018-02-05T00:00:00.000Z}
      minDate={2018-01-17T00:00:00.000Z}
      onChange={[Function]}
      placeholder="end_date"
      value={2018-02-05T00:00:00.000Z}
    />
  </div>
</div>
`;
